# Intelligent_robotics

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: assignment.launch
msg/: ApriltagIDs.msg
src/: coeffs_service_server.cpp  node_a.cpp  node_b.cpp
srv/: Coeffs.srv  GetApriltagIDs.srv
